# ovis-1

./: configure.ac
ldms/python/: ldms.pyx
ldms/python/ldmsd/: ldmsd_communicator.py  ldmsd_config.py  ldmsd_controller  ldmsd_request.py  ldmsd_util.py
ldms/python/test/ldmsd/: ldmsctl.py  ldmsd_auth_munge.py  ldmsd_auth_ovis.py  ldmsd_cmd_exp.py  ldmsd_failover.py  ldmsd_set_array.py
ldms/src/ldmsd/: ldmsd.c  ldmsd.h  ldmsd_request.c  ldmsd_request.h  ldmsd_request_util.c
ldms/src/sampler/: Makefile.am  common.am
ldms/src/sampler/appinfo_lib/: Makefile.am
ldms/src/sampler/cray_power_sampler/: Makefile.am
ldms/src/sampler/fptrans/: Makefile.am
ldms/src/sampler/ldms_jobid/: Makefile.am
ldms/src/sampler/msr_interlagos/: Makefile.am
ldms/src/sampler/perfevent/: Makefile.am
ldms/src/sampler/procdiskstats/: Makefile.am
ldms/src/sampler/procinterrupts/: Makefile.am
ldms/src/sampler/procnetdev/: Makefile.am
ldms/src/sampler/procnfs/: Makefile.am
ldms/src/sampler/sampler_atasmart/: Makefile.am
ldms/src/sampler/switchx/: Makefile.am
ldms/src/sampler/sysclassib/: Makefile.am
ldms/src/sampler/test-samplers/: Makefile.am
lib/src/ovis_util/: util.c  util.h
